//
// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package com.google.floody.protobuf;

message GtmExportRequest {
  string spreadsheet_id = 1;
  string gtm_container_id = 2;
  string requester_message = 3;
  repeated string approver_emails = 4;
}

message GtmExportResponse {
  int64 request_id = 1;
  string request_uri = 2;

  GtmOperationStatus status = 5;

  repeated GtmTagOperationResult gtm_tag_operation_results = 10;

  GtmExportRequest request = 15;
}

message GtmTagOperationResult {
  bool success = 1;
  string floodlight_activity = 5;
  string message = 10;
}

message GtmOperationStatus {
  bool success = 1;
  string error_message = 5;
}

enum GtmTagOperationAction {
  UNKNOWN = 0;
  APPROVE = 1;
  REJECT = 2;
}

message GtmTagOperationResults {
  bool success = 1;
  GtmTagOperationAction action = 2;
  repeated GtmTagOperationResult gtm_tag_operation_result = 5;
}
